# Moxxie-menu

.github/workflows/: extract-and-push.yml
HoldableTemplate/app/: build.gradle
HoldableTemplate/app/src/main/cpp/: CMakeLists.txt
HoldableTemplate/app/src/main/cpp/Include/: XRInput.cpp
HoldableTemplate/app/src/main/cpp/Include/Menu/: MenuManager.hpp  Settings.hpp
HoldableTemplate/app/src/main/cpp/Include/Mods/: Movement.hpp  Overpowered.hpp  Player.hpp
HoldableTemplate/gradle/: libs.versions.toml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/Include/: BNMIncludes.hpp  BNMResolve.hpp  ModInclude.hpp  PhotonResolve.hpp  XRInput.hpp  httplib.h
app/src/main/cpp/Include/Menu/: ButtonInfo.hpp  Buttons.hpp  MenuManager.hpp  ModMenu.cpp  ModMenu.hpp  Settings.cpp  Settings.hpp
app/src/main/cpp/Include/Mods/: Movement.hpp  Photon.hpp  Visuals.hpp
app/src/main/cpp/Include/NotiLib/: NotiLib.cpp  NotiLib.hpp
gradle/wrapper/: gradle-wrapper.properties
